-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.12.1
-
None
Modify test case implementation sometime cause test panel to unselect all tests if previously was manually selected some. This is quite annoying if you're working on a subset of test cases and you have to reselect them every time.
For Gerrit Dashboard: QTCREATORBUG-24099 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
302858,4 | AutoTest: Restore former check state on reparse | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |